2006-08-08 Braden McDaniel  <braden@endoframe.com>

	Updated libtool library version numbers.

	* src/libopenvrml/Makefile.am (LIBRARY_VERSION): Updated to 6:0:0.
	* src/libopenvrml-gl/Makefile.am (LIBRARY_VERSION): Updated to
	6:2:0.

2006-08-08 Braden McDaniel  <braden@endoframe.com>

	* doc/index.doc: Documentation improvements.

2006-08-08 Braden McDaniel  <braden@endoframe.com>

	* doc/index.doc: Added the beginnings of a user guide.

2006-08-06 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am: Remove doxygen-generated files in a loop;
	otherwise, rm may complain of too many arguments.

2006-08-06 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/script.cpp

2006-08-06 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.10 release.

	* NEWS: Added record of 0.15.0 release.

2006-08-05 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am: Remove doxygen-generated files before running
	doxygen.  Doxygen does not necessarily work well if output files
	from a previous run are present.

2006-08-05 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2006-08-05 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/browser.cpp

2006-08-05 Braden McDaniel  <braden@endoframe.com>

	Increased buffer sizes to something a little more
	reasonable (16kB).

	* mozilla-plugin/src/openvrml-player/command_istream.h
	(openvrml_player::command_streambuf::source_buffer_): Changed
	buffer size to 16384.
	* mozilla-plugin/src/openvrml-player/plugin_streambuf.h
	(openvrml_player::plugin_streambuf::buf_): Changed buffer size to
	16384.

2006-08-04 Braden McDaniel  <braden@endoframe.com>
